2008-10-17  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/pitivi.py:
	Only import pitivi.ui for Interactive subclass
	* pitivi/Makefile.am:
	* pitivi/ui/Makefile.am:
	* pitivi/ui/dnd.py:
	Move dnd module to pitivi.ui
	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/viewer.py:
	Adjust code for dnd move

2008-10-17  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/configure.py.in:
	Fix header

2008-10-17  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/ui/mainwindow.py:
	Fix some code that was badly merged. Re-adds proper webcam detection

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/dnd.py:
	* pitivi/instance.py:
	Comments.

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/ui/sourcefactories.py:
	Better thumbnailing handling for new objectfactories.
	
2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/timeline/composition.py:
	* pitivi/timeline/objects.py:
	* pitivi/timeline/source.py:
	Use python properties more.
	* tests/test_timeline_composition.py:
	* tests/test_timeline_objects.py:
	* tests/test_timeline_source.py:
	Adapt tests for changes.

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/check.py:
	* pitivi/configure.py.in:
	* pitivi/discoverer.py:
	* pitivi/effects.py:
	* pitivi/elements/imagefreeze.py:
	* pitivi/elements/singledecodebin.py:
	* pitivi/elements/smartscale.py:
	* pitivi/elements/thumbnailsink.py:
	* pitivi/elements/videofade.py:
	* pitivi/objectfactory.py:
	* pitivi/playground.py:
	* pitivi/pluginmanager.py:
	* pitivi/project.py:
	* pitivi/projectsaver.py:
	* pitivi/serializable.py:
	* pitivi/settings.py:
	* pitivi/signalgroup.py:
	* pitivi/stream.py:
	* pitivi/thumbnailer.py:
	* pitivi/timeline/composition.py:
	* pitivi/timeline/effects.py:
	* pitivi/timeline/objects.py:
	* pitivi/timeline/source.py:
	* pitivi/timeline/timeline.py:
	* pitivi/ui/complexinterface.py:
	* pitivi/ui/complexlayer.py: